# nxp-imx93-frdm-imx93-hw-vv-tool

./: .editorconfig  .gitignore  BUILD_SYSTEM_REVIEW.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CONVERSION_SUMMARY.md  Makefile  PRODUCTION_CHECKLIST.md  README.md  test_output.json
app/: CMakeLists.txt  main.cpp  nxp_imx93_hw_vv_tool.cpp
docker/: Dockerfile  Makefile
docs/: CMakeLists.txt  Doxyfile.in
include/: camera_tester.h  cpu_tester.h  display_tester.h  form_factor_tester.h  gpio_tester.h  gpu_tester.h  json_utils.h  logger.h  memory_tester.h  networking_tester.h  peripheral_tester.h  power_tester.h  storage_tester.h  usb_tester.h
libs/: CMakeLists.txt
libs/camera/: CMakeLists.txt  camera_tester.cpp
libs/cpu/: CMakeLists.txt  cpu_tester.cpp
libs/display/: CMakeLists.txt  display_tester.cpp
libs/form_factor/: CMakeLists.txt  form_factor_tester.cpp
libs/gpio/: CMakeLists.txt  gpio_tester.cpp
libs/gpu/: CMakeLists.txt  gpu_tester.cpp
libs/memory/: CMakeLists.txt  memory_tester.cpp
libs/networking/: CMakeLists.txt  networking_tester.cpp
libs/power/: CMakeLists.txt  power_tester.cpp
libs/storage/: CMakeLists.txt  storage_tester.cpp
libs/usb/: CMakeLists.txt  usb_tester.cpp
scripts/: build.sh  format.sh  install.sh  test.sh
tests/: CMakeLists.txt
tests/camera/: CMakeLists.txt  test_camera_tester.cpp
tests/cpu/: CMakeLists.txt  test_cpu_tester.cpp
tests/display/: CMakeLists.txt  test_display_tester.cpp
tests/form_factor/: CMakeLists.txt  test_form_factor_tester.cpp
tests/gpio/: test_gpio_tester.cpp
tests/gpu/: CMakeLists.txt  test_gpu_tester.cpp
tests/memory/: CMakeLists.txt  test_memory_tester.cpp
tests/networking/: CMakeLists.txt  test_networking_tester.cpp
tests/power/: CMakeLists.txt  test_power_tester.cpp
tests/storage/: CMakeLists.txt  test_storage_tester.cpp
tests/usb/: CMakeLists.txt  test_usb_tester.cpp
