# GPIO library
add_subdirectory(gpio)

# CPU library
add_subdirectory(cpu)

# Camera library
add_subdirectory(camera)

# GPU library
add_subdirectory(gpu)

# Memory library
add_subdirectory(memory)

# Storage library
add_subdirectory(storage)

# Display library
add_subdirectory(display)

# USB library
add_subdirectory(usb)

# Networking library
add_subdirectory(networking)

# Power library
add_subdirectory(power)

# Form factor library
add_subdirectory(form_factor)