include(GoogleTest)

# All peripheral tests
add_subdirectory(gpio)
add_subdirectory(cpu)
add_subdirectory(camera)
add_subdirectory(gpu)
add_subdirectory(memory)
add_subdirectory(storage)
add_subdirectory(display)
add_subdirectory(usb)
add_subdirectory(networking)
add_subdirectory(power)
add_subdirectory(form_factor)